--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "pizza delivery website",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "serve": "node server.js",
-     "dev":"nodemon server.js"
+    "serve": "node server.js",
+    "dev": "nodemon server.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
   },
   "author": "Chaithanya",
   "license": "ISC",
@@ -15,6 +20,11 @@
     "express-ejs-layouts": "^2.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "cross-env": "^7.0.3",
+    "laravel-mix": "^6.0.15",
+    "nodemon": "^2.0.20",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^11.0.1"
   }
 }
