--- a/package.json
+++ b/package.json
@@ -15,15 +15,28 @@
   "author": "Chaithanya",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
+    "express-flash-message": "^2.1.0",
+    "express-session": "^1.17.3",
+    "jquery": "^3.6.3",
+    "moment": "^2.29.4",
+    "mongoose": "^6.8.2",
+    "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.15",
     "nodemon": "^2.0.20",
-    "resolve-url-loader": "^3.1.2",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^11.0.1"
   }
