--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
+    "mongodb-client-encryption": "^6.0.0",
     "mongoose": "^6.8.2",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
